Content alignment issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -416,11 +416,11 @@ section.banner h4 {
   margin: 15px 0px 20px;
   line-height: 1.5;
   color: #455065;
-  font-size: 18px;
+  font-size: 17px;
   font-weight: 400;
 }
 section.banner h5 {
-  font-size: 19px;
+  font-size: 17px;
   margin-bottom: 40px;
   color: #455065;
   font-weight: 500;
